--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <head>\
   <meta charset="UTF-8" />\
   <meta name="viewport" content="width=device-width, initial-scale=1" />\
-  <title>Gear\'f3id Cronin</title>\
+  <title>Gearoid Cronin</title>\
   <style>\
     body \{\
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,\
