--- a/index.html
+++ b/index.html
@@ -6,20 +6,25 @@
   <title>Gearóid Cronin</title>
   <style>
     body {
+      margin: 0;
+      padding: 0;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      background-image: url('background.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
-      background: #fff;
-      color: #222;
+      color: #fff;
+      text-shadow: 0 1px 3px rgba(0, 0, 0, 0.8);
     }
     a {
       text-decoration: none;
-      color: #0077b5; /* LinkedIn blue */
+      color: #00acee;
       font-weight: bold;
       font-size: 1.2rem;
       margin-top: 1rem;
