--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       padding: 0;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      background-image: url('background.jpg');
+      background-image: url('https://images.unsplash.com/photo-1503264116251-35a269479413?auto=format&fit=crop&w=1920&q=80');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -22,21 +22,55 @@
       color: #fff;
       text-shadow: 0 1px 3px rgba(0, 0, 0, 0.8);
     }
-    a {
-      text-decoration: none;
-      color: #00acee;
-      font-weight: bold;
-      font-size: 1.2rem;
-      margin-top: 1rem;
+
+    .profile-pic {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid white;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+      margin-bottom: 1rem;
     }
-    a:hover {
-      text-decoration: underline;
+
+    .bio-box {
+      background-color: white;
+      color: black;
+      padding: 1rem 2rem;
+      border-radius: 8px;
+      text-align: center;
+      margin-top: 1rem;
+      line-height: 1.5;
+      font-weight: 500;
+    }
+
+    .linkedin-button {
+      margin-top: 1.5rem;
+      background-color: white;
+      color: #0077b5;
+      padding: 0.6rem 1.2rem;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+      transition: background-color 0.3s ease;
+    }
+
+    .linkedin-button:hover {
+      background-color: #f0f0f0;
     }
   </style>
 </head>
 <body>
+  <img src="profile.jpg" alt="Profile photo of Gearóid Cronin" class="profile-pic" />
   <h1>Gearóid Cronin</h1>
-  <a href="https://www.linkedin.com/in/gearoidcronin/" target="_blank" rel="noopener noreferrer">
+
+  <div class="bio-box">
+    MBA | MPH | PMP | LSSGB<br />
+    Business | Health | Sport | Leadership
+  </div>
+
+  <a href="https://www.linkedin.com/in/gearoidcronin/" target="_blank" rel="noopener noreferrer" class="linkedin-button">
     LinkedIn Profile
   </a>
 </body>
