--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
       text-shadow: 0 1px 3px rgba(0, 0, 0, 0.8);
     }
 
-    .profile-pic {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 3px solid white;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-      margin-bottom: 1rem;
-    }
+ .profile-pic {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: top;
+  border: 4px solid white;
+  box-shadow: 0 2px 12px rgba(0, 0, 0, 0.5);
+  margin-bottom: 1rem;
+}
 
     .bio-box {
       background-color: white;
