--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       justify-content: center;
       align-items: center;
       color: #fff;
-      text-shadow: 0 1px 3px rgba(0, 0, 0, 0.8);
     }
 
  .profile-pic {
@@ -34,28 +33,33 @@
   margin-bottom: 1rem;
 }
 
-    .bio-box {
-      background-color: white;
-      color: black;
-      padding: 1rem 2rem;
-      border-radius: 8px;
-      text-align: center;
-      margin-top: 1rem;
-      line-height: 1.5;
-      font-weight: 500;
-    }
+  .bio-box {
+  font-family: Georgia, serif;
+  font-size: 1.1rem;
+  color: black;
+  background-color: white;
+  padding: 1rem 2rem;
+  border-radius: 8px;
+  text-align: center;
+  margin-top: 1rem;
+  line-height: 1.5;
+  font-weight: normal;
+}
 
-    .linkedin-button {
-      margin-top: 1.5rem;
-      background-color: white;
-      color: #0077b5;
-      padding: 0.6rem 1.2rem;
-      border-radius: 5px;
-      text-decoration: none;
-      font-weight: bold;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.3);
-      transition: background-color 0.3s ease;
-    }
+
+ .linkedin-button {
+  font-family: Arial, sans-serif;
+  font-size: 1rem;
+  font-weight: bold;
+  color: #0077b5;
+  background-color: white;
+  padding: 0.6rem 1.2rem;
+  border-radius: 5px;
+  text-decoration: none;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+  transition: background-color 0.3s ease;
+}
+
 
     .linkedin-button:hover {
       background-color: #f0f0f0;
