--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   text-decoration: none;
   box-shadow: 0 2px 4px rgba(0,0,0,0.3);
   transition: background-color 0.3s ease;
+   margin-top: 2rem
 }
 
 
